--- a/ms-inventory-service-v1/pom.xml
+++ b/ms-inventory-service-v1/pom.xml
@@ -14,7 +14,7 @@
 	<artifactId>ms-inventory-service-v1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ms-inventory-service-v1</name>
-	<description>Micro serviço de Inventário</description>
+	<description>Inventory Micro Service</description>
 
 	<properties>
 		<java.version>17</java.version>
@@ -65,6 +65,12 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
 		</dependency>
 
 	</dependencies>
